# snaky

./: Cargo.toml  README.md  build_wasm.sh
src/: arena.rs  food.rs  main.rs  menu_state.rs  play_state.rs  snake.rs
src/menu_state/: controls.rs  options.rs  title.rs
src/play_state/: arena.rs  food.rs  score_board.rs  snake.rs
